# Satya

./: Satya_ Deepfake Detection & Media Authentication Platform.pptx  docker-compose.yml  file.txt  pyproject.toml  vercel.json
Documents/ Satya/: README.md
api/: index.py
backend/: Dockerfile  feedback_log.jsonl  test_imports.py
backend/api/: routes.py
backend/models/: image_detector.py  video_detector.py
backend/utils/: reality_checker.py
frontend/: Dockerfile  nginx.conf  tailwind.config.js  vite.config.ts
frontend/src/: index.css
frontend/src/components/: ResultsDashboard.tsx
frontend/src/pages/: Analysis.tsx  Home.tsx
